# deep-learning

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  X0.txt  X1.txt  Y.txt  activation.cpp  activation.h  cmake_install.cmake  deepnet.cpp  deepnet.h  deepnn.cbp  main.cpp  nnet.cpp  nnet.h
